--- a/Chat_Page.html
+++ b/Chat_Page.html
@@ -24,9 +24,9 @@ var pinCode = "1307";
 var today = new Date().toLocaleString();
 var subject = "SHOP Hosted";
 
-$("#btnSubmit").click(function(){
+<!-- $("#btnSubmit").click(function(){
     $('.helpButtonEnabled').trigger("click");
-});
+}); -->
 
 
     var initESW = function(gslbBaseURL) {
