--- a/Chat_Page.html
+++ b/Chat_Page.html
@@ -24,7 +24,6 @@ var pinCode = "1307";
 var today = new Date().toLocaleString();
 var subject = "SHOP Hosted";
 
-
     var initESW = function(gslbBaseURL) {
         embedded_svc.settings.displayHelpButton = true; //Or false
         embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
@@ -44,6 +43,9 @@ var subject = "SHOP Hosted";
         //embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
         //embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 
+      $("#btnSubmit").click(function(){
+      $('.helpButtonEnabled').trigger("click");
+      });
          embedded_svc.settings.extraPrechatFormDetails = [{
         "label":"First Name",
         "name":"FirstName",
