--- a/Chat_Page.html
+++ b/Chat_Page.html
@@ -43,9 +43,9 @@ var subject = "SHOP Hosted";
         //embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
         //embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 
-      $("#btnSubmit").click(function(){
-      $('.helpButtonEnabled').trigger("click");
-      });
+      //$("#btnSubmit").click(function(){
+      //$('.helpButtonEnabled').trigger("click");
+      //});
          embedded_svc.settings.extraPrechatFormDetails = [{
         "label":"First Name",
         "name":"FirstName",
