--- a/Chat_Page.html
+++ b/Chat_Page.html
@@ -169,5 +169,11 @@ var subject = "SHOP Hosted";
     }
 </script>
 
+<script>
+  $("#btnSubmit").click(function(){
+    $('.helpButtonEnabled').trigger("click");
+    });
+  </script>
+  
 </body>
 </html>
