--- a/Chat_Page.html
+++ b/Chat_Page.html
@@ -168,7 +168,9 @@ var subject = "SHOP Hosted";
         initESW('https://service.force.com');
     }
 </script>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script>
   $("#btnSubmit").click(function(){
     $('.helpButtonEnabled').trigger("click");
